<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">appCandyHouse</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="btnConnectXMPP">Connect XMPP</string>
    <string name="btnDisconnectXMPP">Disconnect XMPP</string>
    <string name="txtXMPPIDTitle">XMPP ID:</string>
    <string name="txtXMPPID">XMPP is not connected</string>
    <string name="btnSubmitMsg">Submit Message</string>
    <string name="btnCreateAccount">Create Account</string>
    
    <string name="registryStatus">GCM Registry Status:</string>
    <string name="registryStatusResult">Not Registered</string>
    <string name="broadcastLabel">Broadcast Message:</string>
    <string name="broadcastResult">No broadcast message yet</string>
    <string name="btnSubmitRegId">Submit Registered ID</string>
    
    <string name="txtBluetoothStatus">Blue Tooth Status</string>
    <string name="btnTurnOn">Turn On</string>
    <string name="btnTurnOff">Turn Off</string>
    <string name="pairedList">Paired List</string>
    <string name="findDevices">Search/Cancel</string>

</resources>
